@@ -7,6 +7,7 @@
 
     Multisite:
     * 4169 View action: Default values of sticky, notification and persistent options can now be configured via global settings....
+    * 4143 FIX: Fixed possible log spam "MKAuthException: Invalid credentials" in web.log...
 
     WATO:
     * 4142 New extended search dialog for rulesets and rules...
